# moin2gitwiki

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
changelog/: index.html
commands/: index.html
docs/: commands.md
docs/internal/: cli.md  context.md  fetch_cache.md  gitrevision.md  moin2markdown.md  users.md  wikiindex.md
internal/cli/: index.html
internal/context/: index.html
internal/fetch_cache/: index.html
internal/gitrevision/: index.html
internal/moin2markdown/: index.html
internal/users/: index.html
internal/wikiindex/: index.html
moin2gitwiki/: __init__.py  cli.py  context.py  fetch_cache.py  gitrevision.py  moin2markdown.py  users.py  wikiindex.py
search/: search_index.json
tests/: test_command_line.py  test_version.py
